--- a/package.json
+++ b/package.json
@@ -11,21 +11,39 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@uiw/codemirror-extensions-langs": "^4.22.1",
+    "@uiw/codemirror-themes-all": "^4.22.1",
+    "@uiw/react-codemirror": "^4.22.1",
+    "@uiw/react-markdown-preview": "^5.1.1",
+    "@uiw/react-textarea-code-editor": "^3.0.2",
+    "ace-builds": "^1.34.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "emoji-picker-react": "^4.9.3",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
+    "react-ace": "^11.0.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-share": "^5.1.0",
+    "react-simple-code-editor": "^0.13.1",
     "react-type-animation": "^3.2.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-rewrite": "^4.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
