--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
@@ -36,9 +37,11 @@
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-ace": "^11.0.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-share": "^5.1.0",
     "react-simple-code-editor": "^0.13.1",
     "react-type-animation": "^3.2.0",
