--- a/package.json
+++ b/package.json
@@ -24,21 +24,19 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@uiw/codemirror-extensions-langs": "^4.22.1",
-    "@uiw/codemirror-themes-all": "^4.22.1",
-    "@uiw/react-codemirror": "^4.22.1",
-    "@uiw/react-markdown-preview": "^5.1.1",
     "@uiw/react-textarea-code-editor": "^3.0.2",
     "ace-builds": "^1.34.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "draft-js": "^0.11.7",
     "embla-carousel-react": "^8.1.3",
     "emoji-picker-react": "^4.9.3",
     "lucide-react": "^0.379.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-ace": "^11.0.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
