--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.17.3",
     "@uiw/react-textarea-code-editor": "^3.0.2",
     "ace-builds": "^1.34.2",
     "class-variance-authority": "^0.7.0",
