--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "ace-builds": "^1.34.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
-    "embla-carousel-react": "^8.1.3",
+    "embla-carousel-react": "^8.1.5",
     "emoji-picker-react": "^4.9.3",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-ace": "^11.0.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
